Fix page container width for better announcer display spacing

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -46,3 +46,13 @@ label {
 	position:absolute;
   z-index:1;
 }
+
+table.announcer_display_table {
+    width: 100%;
+    font-size: 150%;
+}
+
+.container {
+    margin: 0 auto;
+    width: 98%;
+}
